[package]
name = "v_swim_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "v_swim_api"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11.4"
tokio = "1.12.0"

[dependencies]
actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"