[package]
name = "v_swim_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "v_swim_api"

[dev-dependencies]
actix-rt = "2.2.0"
reqwest = "0.11.4"
tokio = "1.12.0"
once_cell = "1.8.0"

[dependencies]
actix-web = "=4.0.0-beta.9"
actix-http = "=3.0.0-beta.10"
serde = { version="1", features=["derive"]}
config = "0.11.0"
chrono = "0.4.19"
uuid = {version = "0.8.2", features = ["v4"]}
log = "0.4.14"
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.25", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.2.6"
tracing-log = "0.1.2"

[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]